<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/raiz1Txt"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/aqu_se_mostrar_la_ra_z_1"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolverBtn"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/subtitulo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/ra_z_2"
        android:textColor="#010203"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo4"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/raiz2Txt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/aqu_se_mostrar_la_ra_z_2"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raiz1Txt"
        app:layout_constraintVertical_bias="0.098"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/subtitulo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/ra_z_1"
        android:textColor="#010203"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolverBtn"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/cTxt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ingresa_el_coeficiente_c"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bTxt"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/bTxt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ingresa_el_coeficiente_b"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aTxt"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/ecuaciones_de_segundo_grado"
        android:textColor="#010203"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/ecuacion"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:fontFamily="@font/lato"
        android:text="@string/ax_bx_c_0"
        android:textColor="#010203"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/subtitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/a"
        android:textColor="#010203"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecuacion"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/subtitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/b"
        android:textColor="#010203"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo1"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/subtitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/c"
        android:textColor="#010203"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo2"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/aTxt"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ingresa_el_coeficiente_a"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecuacion"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/resolverBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="@font/lato"
        android:onClick="getSqrt"
        android:text="@string/resolver"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cTxt"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>